<resources>
    <string name="app_name">AndroidSurfEducation</string>
    <string name="main_activity_name">Популярные мемы</string>

    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="enter_button_text">Войти</string>
    <string name="password_info_text">Пароль должен содержать 6 символов</string>
    <string name="error_text">Поле не может быть пустым</string>
    <string name="password_error_text">Слишком короткий пароль</string>
    <string name="login_error_text">Вы ввели неверные данные.\nПопробуйте еще раз</string>
    <string name="search_hint">Найди мем по душе</string>

    <string name="bottom_memes">Мемы</string>
    <string name="bottom_add_meme">Добавить мем</string>
    <string name="bottom_profile">Профиль</string>

    <string name="internet_error_text">Отсутствует интернет-соединение.\nПопробуйте позже</string>
    <string name="memes_query_error_text">Не удалось загрузить ленту\nОбновите экран или попробуйте позже</string>

    <string name="share_meme_hint">Кинь мемас</string>
    <string name="like_meme_hint">Лайкни мемас</string>
    
    <string name="create_meme_text">Создать</string>
    <string name="create_meme_title_text">Заголовок</string>
    <string name="create_meme_description_text">Текст</string>
    <string name="create_meme_text_toolbar">Создать свой мем</string>
    <string name="load_from_galery_text">Из галереи</string>
    <string name="take_a_photo">Сделать фото</string>

    <plurals name="meme_publication_date_days">
        <item quantity="zero">Сегодня</item>
        <item quantity="one">%1$s день назад</item>
        <item quantity="few">%1$s дня назад</item>
        <item quantity="many">%1$s дней назад</item>
    </plurals>

    <plurals name="meme_publication_date_month">
        <item quantity="one">%1$s месяц назад</item>
        <item quantity="few">%1$s месяца назад</item>
        <item quantity="many">%1$s месяцев назад</item>
    </plurals>

    <plurals name="meme_publication_date_year">
        <item quantity="one">%1$s год назад</item>
        <item quantity="few">%1$s года назад</item>
        <item quantity="many">%1$s лет назад</item>
    </plurals>
    
    <string name="profile_menu_about">О приложении</string>
    <string name="profile_menu_logout">Выйти</string>

    <string name="dialog_logout">Вы действительно хотите выйти?</string>
    <string name="dialog_logout_yes">Выйти</string>
    <string name="dialog_logout_no">Отмена</string>
</resources>
