<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_navigation_memes"
        android:icon="@drawable/ic_memes_tab_inactive"
        android:enabled="true"
        android:title="@string/bottom_memes"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_add_meme"
        android:icon="@drawable/ic_add_meme"
        android:enabled="true"
        android:title="@string/bottom_add_meme"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_profile"
        android:icon="@drawable/ic_person_tab_inactive"
        android:enabled="true"
        android:title="@string/bottom_profile"
        app:showAsAction="ifRoom"/>

</menu>