<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_meme_toolbar"
        style="@style/AppTheme.MemeToolbar"
        android:background="@color/backgroundBrighterColor"
        app:title="@string/create_meme_text_toolbar"
        app:titleTextColor="@color/inactiveColor" />

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/your_meme_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:textColorHint="@color/createMemeTextColor"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:counterOverflowTextAppearance="@color/errorColor"
                app:counterEnabled="true"
                app:counterMaxLength="140"
                app:counterOverflowTextColor="@color/errorColor"
                app:counterTextColor="@color/backgroundColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:background="@null"
                    android:textColor="@color/activeColor"
                    android:paddingTop="6dp"
                    android:hint="@string/create_meme_title_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/your_meme_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/createMemeTextColor"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:counterOverflowTextAppearance="@color/errorColor"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                app:counterOverflowTextColor="@color/errorColor"
                app:counterTextColor="@color/backgroundColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="@color/activeColor"
                    android:paddingTop="6dp"
                    android:hint="@string/create_meme_description_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress_bar_creation"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:theme="@style/AppTheme.MemesProgressBar"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:visibility="invisible"/>

                <ImageView
                    android:id="@+id/image_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageButton
                    android:id="@+id/delete_image"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ic_close_meme_button"
                    app:srcCompat="@drawable/ic_close_meme" />

            </FrameLayout>

            <ImageButton
                android:id="@+id/add_image"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/ic_load_image_button"
                app:srcCompat="@drawable/ic_load_image" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>